Rating library and feature added.
Signed-off-by: Vinod Patil <61724808+vinodpatildev@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     //viewpager 2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+    //rating library
+    implementation "com.github.hotchemi:android-rate:1.0.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
