--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     //rating library
     implementation "com.github.hotchemi:android-rate:1.0.1"
 
+    //admob
+//    implementation 'com.google.android.gms:play-services-ads:22.1.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
