--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,15 +13,15 @@ android {
         applicationId "com.vinodpatildev.saralbhagavadgitahindi"
         minSdk 24
         targetSdk 33
-        versionCode 5
-        versionName "5.0"
+        versionCode 6
+        versionName "6.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
