Ads removed from app.
Signed-off-by: Vinod Patil <61724808+vinodpatildev@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ dependencies {
     implementation "com.github.hotchemi:android-rate:1.0.1"
 
     //admob
-    implementation 'com.google.android.gms:play-services-ads:22.1.0'
+//    implementation 'com.google.android.gms:play-services-ads:22.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
