--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SaralBhagavadGitaHindi"
         tools:targetApi="31" >
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/admob_app_id"/>
+<!--        <meta-data-->
+<!--            android:name="com.google.android.gms.ads.APPLICATION_ID"-->
+<!--            android:value="@string/admob_app_id"/>-->
         <activity
             android:name=".view.verse.VerseActivity"
             android:exported="false" />
