added extra project data.
Signed-off-by: Vinod Patil <vinod@getswipe.in>

--- a/BhagavadGitaApp/app/build.gradle
+++ b/BhagavadGitaApp/app/build.gradle
@@ -15,9 +15,8 @@ android {
         applicationId "com.vinodpatildev.saralbhagavadgitahindi"
         minSdk 24
         targetSdk 34
-        versionCode 8
-        versionName "8.0"
-
+        versionCode 12
+        versionName "12"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -25,6 +24,7 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
